[bugfix] increase contrast for spoiler link

--- a/app/javascript/flavours/glitch/styles/gts/status/status-spoiler.scss
+++ b/app/javascript/flavours/glitch/styles/gts/status/status-spoiler.scss
@@ -4,12 +4,12 @@
     gap: 5px;
     margin-top: 5px;
     padding: 5px 8px;
-    border: 1px solid var(--color-secondary-fg);
+    border: 1px solid var(--color-accent-lines);
     border-radius: 8px;
-    color: var(--color-secondary-fg);
+    color: var(--color-accent-fg);
     font-size: 12px;
     font-weight: 500;
-    background: transparent;
+    background: var(--color-accent-bg);
     transition: all 0.3s;
 
     .gts-icon {
@@ -17,7 +17,7 @@
     }
 
     &:hover {
-        border-color: var(--color-fg);
+        border-color: var(--color-lines);
         color: var(--color-fg);
     }
 }
